--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -115,7 +115,7 @@ dependencies {
     compile 'io.github.igagis:libutki:+'
     compile 'io.github.igagis:libkolme:+'
     compile 'io.github.igagis:libpapki:+'
-    compile 'io.github.igagis:libmorda:0.5.36'
+    compile 'io.github.igagis:libmorda:+'
     compile 'io.github.igagis:libnitki:+'
     compile 'io.github.igagis:libmorda_opengles2_ren:+'
     compile project(':libmordavokne')
