--- a/android/fakecreateapp/build.gradle
+++ b/android/fakecreateapp/build.gradle
@@ -90,6 +90,10 @@ repositories {
 }
 dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
+    compile 'io.github.igagis:libutki:+'
+    compile 'io.github.igagis:libpapki:+'
+    compile 'io.github.igagis:libkolme:+'
+    compile 'io.github.igagis:libmorda:+'
 }
 
 
