--- a/android/libmordavokne/build.gradle
+++ b/android/libmordavokne/build.gradle
@@ -29,8 +29,7 @@ model {
             ldLibs.addAll(['android', 'log', 'EGL', 'nitki', 'morda-opengles2-ren',
                             'morda', 'stob', 'papki',
                             'png', 'jpeg', 'GLESv2', 'z', 'freetype2',
-                            'svgren', 'svgdom', 'cairo', 'pixman', 'mikroxml', 'unikod', 'c++',
-                            'fakecreateapp'])
+                            'svgren', 'svgdom', 'cairo', 'pixman', 'mikroxml', 'unikod', 'c++'])
             stl = 'c++_shared'
             cppFlags.add("-std=c++11")
             cppFlags.add("-fexceptions")
@@ -49,22 +48,18 @@ model {
             create("armeabi-v7a") {
                 ldFlags.add("-L" + projectDir.getAbsolutePath() + "/build/ndkLibs/armeabi-v7a")
                 cppFlags.addAll(["-isystem", ndkInc + "/arm-linux-androideabi"])
-                ldFlags.add("-L" + projectDir.getAbsolutePath() + "/../fakecreateapp/build/intermediates/binaries/release/lib/armeabi-v7a")
             }
             create("arm64-v8a") {
                 ldFlags.add("-L" + projectDir.getAbsolutePath() + "/build/ndkLibs/arm64-v8a")
                 cppFlags.addAll(["-isystem", ndkInc + "/aarch64-linux-android"])
-                ldFlags.add("-L" + projectDir.getAbsolutePath() + "/../fakecreateapp/build/intermediates/binaries/release/lib/arm64-v8a")
             }
             create("x86") {
                 ldFlags.add("-L" + projectDir.getAbsolutePath() + "/build/ndkLibs/x86")
                 cppFlags.addAll(["-isystem", ndkInc + "/i686-linux-android"])
-                ldFlags.add("-L" + projectDir.getAbsolutePath() + "/../fakecreateapp/build/intermediates/binaries/release/lib/x86")
             }
             create("x86_64") {
                 ldFlags.add("-L" + projectDir.getAbsolutePath() + "/build/ndkLibs/x86_64")
                 cppFlags.addAll(["-isystem", ndkInc + "/x86_64-linux-android"])
-                ldFlags.add("-L" + projectDir.getAbsolutePath() + "/../fakecreateapp/build/intermediates/binaries/release/lib/x86_64")
             }
         }
         buildTypes {
@@ -89,6 +84,9 @@ model {
     android.sources {
         main {
             jni {
+                dependencies {
+                    project ":fakecreateapp" linkage "shared"
+                }
                 exportedHeaders {
                     srcDir "../../src/"
                 }
@@ -110,10 +108,9 @@ dependencies {
     compile 'io.github.igagis:libutki:+'
     compile 'io.github.igagis:libpapki:+'
     compile 'io.github.igagis:libkolme:+'
-    compile 'io.github.igagis:libmorda:0.5.36'
+    compile 'io.github.igagis:libmorda:+'
     compile 'io.github.igagis:libmorda_opengles2_ren:+'
     compile 'io.github.igagis:libnitki:+'
-    compile project(':fakecreateapp')
 }
 
 
