Revert "android: print storage directory from test app"
This reverts commit a154f08528e1387fdc2448563907368223b59f72.

--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -118,6 +118,7 @@ dependencies {
     compile 'io.github.igagis:libmorda:+'
     compile 'io.github.igagis:libnitki:+'
     compile 'io.github.igagis:libmorda_opengles2_ren:+'
+    compile project(':libmordavokne')
 }
 
 
