--- a/nuget/nuget.autopkg.in
+++ b/nuget/nuget.autopkg.in
@@ -1,3 +1,11 @@
+configurations {
+	UserPlatformToolset {
+		// Needed because autopackage lacks VS2015+ support
+		key = "PlatformToolset";
+		choices: "v140,v141";
+	};
+}
+
 nuget{
 	nuspec{
 		id = libmordavokne;
@@ -35,20 +43,36 @@ nuget{
 			"..\src\mordavokne\**\*.hpp"
 		};
 
-		[x86,release] {
-			lib: ..\msvs_solution\Release\mordavokne.lib;
+		[x86,v140,release] {
+			lib: ..\msvs_solution\v140_Release\mordavokne.lib;
 		}
 
-		[x86,debug] {
-			lib: ..\msvs_solution\Debug\mordavokne.lib;
+		[x86,v140,debug] {
+			lib: ..\msvs_solution\v140_Debug\mordavokne.lib;
 		}
 
-		[x64,release] {
-			lib: ..\msvs_solution\x64\Release\mordavokne.lib;
+		[x64,v140,release] {
+			lib: ..\msvs_solution\x64\v140_Release\mordavokne.lib;
 		}
 
-		[x64,debug] {
-			lib: ..\msvs_solution\x64\Debug\mordavokne.lib;
+		[x64,v140,debug] {
+			lib: ..\msvs_solution\x64\v140_Debug\mordavokne.lib;
+		}
+
+		[x86,v141,release] {
+			lib: ..\msvs_solution\v141_Release\mordavokne.lib;
+		}
+
+		[x86,v141,debug] {
+			lib: ..\msvs_solution\v141_Debug\mordavokne.lib;
+		}
+
+		[x64,v141,release] {
+			lib: ..\msvs_solution\x64\v141_Release\mordavokne.lib;
+		}
+
+		[x64,v141,debug] {
+			lib: ..\msvs_solution\x64\v141_Debug\mordavokne.lib;
 		}
 	}
 }
