--- a/.travis.yml
+++ b/.travis.yml
@@ -106,7 +106,7 @@ install:
 # Accept android SDK licenses and install android tools
 - if [ "$TRAVIS_JOB_NAME" == "android" ]; then
     echo y | sdkmanager "ndk-bundle" &&
-    echo y | sdkmanager "cmake;3.6.4111459";
+    echo y | sdkmanager "cmake";
   fi
 
 script:
