--- a/cocoapods/mordavokne.podspec.in
+++ b/cocoapods/mordavokne.podspec.in
@@ -6,10 +6,10 @@ Pod::Spec.new do |s|
   s.license      = 'MIT'
   s.author       = { "Ivan Gagis" => "igagis@gmail.com" }
   s.platform     = :ios, "7.0"
-  
+
   s.source = { :git => "https://github.com/igagis/mordavokne.git", :tag => s.version }
 
-  s.source_files  = "src/**/*.{hpp,h,cpp,cppinc}", "src/mordavokne/glue/ios/main.mm"
+  s.source_files  = "src/**/*.{hpp,h,cpp,cxx}", "src/mordavokne/glue/ios/main.mm"
   s.header_mappings_dir = "src"
 
   #we don't use Objective-C Automatic Resource Counting
