--- a/cocoapods/mordavokne.podspec.in
+++ b/cocoapods/mordavokne.podspec.in
@@ -1,29 +1,31 @@
 Pod::Spec.new do |s|
-  s.name         = "libmordavokne"
+  s.name         = "mordavokne"
   s.version      = "$(version)"
   s.summary      = "Intrusive C++ cross-platform GUI library."
-  s.homepage     = "https://github.com/igagis/mordavokne"
-  s.license      = 'MIT'
+  s.homepage     = "https://github.com/igagis/#{s.name}"
+  s.license      = { :type => 'MIT', :file => 'LICENSE' }
   s.author       = { "Ivan Gagis" => "igagis@gmail.com" }
-  s.platform     = :ios, "7.0"
+  s.platform     = :ios
+  s.ios.deployment_target = '8.0'
 
-  s.source = { :git => "https://github.com/igagis/mordavokne.git", :tag => s.version }
+  s.source = { :http => "https://dl.bintray.com/igagis/cocoapods/#{s.name}/#{s.version}/#{s.name}-#{s.version}.zip" }
 
-  s.source_files  = "src/**/*.{hpp,h,cpp,cxx}", "src/mordavokne/glue/ios/main.mm"
-  s.header_mappings_dir = "src"
+  s.source_files  = "include/**/*.{hpp,h}"
+  s.header_mappings_dir = "include"
 
-  #we don't use Objective-C Automatic Resource Counting
-  s.requires_arc = false
+  s.ios.vendored_library = "lib/ios/lib#{s.name}.a"
 
-  #this tells that we are linking against c++ libraries
-  s.libraries = 'c++'
+  #TODO: is this needed?
+  # we don't use Objective-C Automatic Resource Counting
+  #s.requires_arc = false
 
-  s.frameworks = 'GLKit'
+  #TODO: is this needed?
+  #s.frameworks = 'GLKit'
 
-  s.dependency 'libutki', '>= 1.0.32'
-  s.dependency 'libnitki', '>= 1.0.14'
-  s.dependency 'libmorda', '>= 0.5.71'
-  s.dependency 'libpapki', '>= 1.0.11'
-  s.dependency 'libkolme', '>= 1.0.6'
-  s.dependency 'libmorda-opengles2-ren', '>= 0.1.7'
+  s.dependency 'utki', '>= 1.0.32'
+  s.dependency 'nitki', '>= 1.0.14'
+  s.dependency 'morda', '>= 0.5.71'
+  s.dependency 'papki', '>= 1.0.11'
+  s.dependency 'kolme', '>= 1.0.6'
+  s.dependency 'morda-opengles2-ren', '>= 0.1.7'
 end
