--- a/tests/app/makefile
+++ b/tests/app/makefile
@@ -48,7 +48,7 @@ else ifeq ($(prorab_os),linux)
     this_ldflags += -rdynamic
 endif
 
-this_ldlibs += -lstob -lmorda -lunikod -lm -lstdc++
+this_ldlibs += -lpuu -lmorda -lunikod -lm -lstdc++
 
 
 $(eval $(prorab-build-app))
