--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -44,13 +44,13 @@ repositories {
     }
 }
 dependencies {
-    implementation 'io.github.igagis:libutki:+'
-    implementation 'io.github.igagis:libkolme:+'
-    implementation 'io.github.igagis:libpapki:+'
-    implementation 'io.github.igagis:libmorda:+'
-    implementation 'io.github.igagis:libnitki:+'
-    implementation 'io.github.igagis:libmorda_opengles2_ren:+'
-    implementation project(path: ':libmordavokne', configuration: 'default')
+    implementation 'io.github.igagis:utki:+'
+    implementation 'io.github.igagis:r4:+'
+    implementation 'io.github.igagis:papki:+'
+    implementation 'io.github.igagis:morda:+'
+    implementation 'io.github.igagis:nitki:+'
+    implementation 'io.github.igagis:morda_opengles2_ren:+'
+    implementation project(path: ':mordavokne', configuration: 'default')
 }
 
 
