--- a/homebrew/mordavokne.rb.in
+++ b/homebrew/mordavokne.rb.in
@@ -1,4 +1,4 @@
-class Libmordavokne < Formula
+class Mordavokne < Formula
   desc "Intrusive C++ cross-platform OpenGL based GUI library."
   homepage "https://github.com/igagis/mordavokne"
   url "https://github.com/igagis/mordavokne/archive/$(version).tar.gz"
@@ -13,8 +13,8 @@ class Libmordavokne < Formula
   depends_on "glew"
   depends_on "libkolme"
   depends_on "libmorda"
-  depends_on "libmorda-opengl2-ren"
-  
+  depends_on "morda-opengl2-ren"
+
   def install
     ENV['PATH'] += ':/usr/local/bin'
     system "make", "-f", "src/makefile", "install", "PREFIX=#{prefix}"
