--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -49,7 +49,7 @@ dependencies {
     implementation 'io.github.igagis:papki:+'
     implementation 'io.github.igagis:morda:+'
     implementation 'io.github.igagis:nitki:+'
-    implementation 'io.github.igagis:morda_opengles2_ren:+'
+    implementation 'io.github.igagis:morda-opengles2-ren:+'
     implementation project(path: ':mordavokne', configuration: 'default')
 }
 
