--- a/android/mordavokne/build.gradle
+++ b/android/mordavokne/build.gradle
@@ -50,7 +50,7 @@ dependencies {
     implementation 'io.github.igagis:papki:+'
     implementation 'io.github.igagis:r4:+'
     implementation 'io.github.igagis:morda:+'
-    implementation 'io.github.igagis:morda_opengles2_ren:+'
+    implementation 'io.github.igagis:morda-opengles2-ren:+'
     implementation 'io.github.igagis:nitki:+'
 }
 
