macosx build fix

--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -16,6 +16,12 @@
             "type": "shell",
             "command": "make clean",
             "problemMatcher": []
+        },
+        {
+            "label": "run",
+            "type": "shell",
+            "command": "make run",
+            "problemMatcher": []
         }
     ]
 }
