podspec dependency corrected

--- a/cocoapods/mordavokne.podspec.in
+++ b/cocoapods/mordavokne.podspec.in
@@ -26,6 +26,6 @@ Pod::Spec.new do |s|
   s.dependency 'nitki', '>= 1.0.14'
   s.dependency 'morda', '>= 0.5.71'
   s.dependency 'papki', '>= 1.0.11'
-  s.dependency 'kolme', '>= 1.0.6'
+  s.dependency 'r4', '>= 0.1.0'
   s.dependency 'morda-opengles2-ren', '>= 0.1.7'
 end
