--- a/nuget/nuget.autopkg.in
+++ b/nuget/nuget.autopkg.in
@@ -26,13 +26,13 @@ nuget{
 	}
 	dependencies {
 		packages : {
-			libkolme/1.0.6;
+			r4/0.1.0;
 			libmorda/0.5.71;
 			libmorda-opengl2-ren/0.1.7;
 			glew.v140/1.12.0;
 			libpapki/1.0.15;
 			libpogodi/1.0.10;
-			libstob/3.2.7;
+			puu/0.1.0;
 			libutki/1.0.22;
 		};
 	}
