--- a/tests/app/makefile
+++ b/tests/app/makefile
@@ -39,7 +39,6 @@ ifeq ($(prorab_os),windows)
     this_ldlibs += -lmingw32 #these should go first, otherwise linker will complain about undefined reference to WinMain
     this_ldlibs += $(d)../../src/$(this_mordavoknelib)$(soext)
     this_ldlibs += -lglew32 -lopengl32 -lpng -ljpeg -lz -lfreetype -mwindows
-    this_ldlibs += -lpapki
 else ifeq ($(prorab_os),macosx)
     this_ldlibs += $(prorab_this_dir)../../src/$(this_mordavoknelib)$(prorab_lib_extension) -lGLEW -framework OpenGL -framework Cocoa -lpng -ljpeg -lfreetype
     this_ldflags += -rdynamic
@@ -48,7 +47,7 @@ else ifeq ($(prorab_os),linux)
     this_ldflags += -rdynamic
 endif
 
-this_ldlibs += -lpuu -lmorda -lunikod -lm -lstdc++
+this_ldlibs += -lpuu -lmorda -lunikod -lpapki -lm -lstdc++
 
 
 $(eval $(prorab-build-app))
