--- a/examples/basic/msvs_solution/basic/packages.config
+++ b/examples/basic/msvs_solution/basic/packages.config
@@ -11,7 +11,7 @@
   <package id="libpapki" version="1.0.15" targetFramework="native" />
   <package id="libpng" version="1.6.23.1" targetFramework="native" />
   <package id="libpng.redist" version="1.6.23.1" targetFramework="native" />
-  <package id="libpogodi" version="1.0.10" targetFramework="native" />
+  <package id="libopros" version="1.0.35" targetFramework="native" />
   <package id="libstob" version="3.2.7" targetFramework="native" />
   <package id="libsvgdom" version="0.2.14" targetFramework="native" />
   <package id="libsvgren" version="0.3.14" targetFramework="native" />
