--- a/examples/basic/msvs_solution/basic/basic.vcxproj
+++ b/examples/basic/msvs_solution/basic/basic.vcxproj
@@ -162,7 +162,7 @@
     <Import Project="..\packages\libutki.1.0.22\build\native\libutki.targets" Condition="Exists('..\packages\libutki.1.0.22\build\native\libutki.targets')" />
     <Import Project="..\packages\libkolme.1.0.6\build\native\libkolme.targets" Condition="Exists('..\packages\libkolme.1.0.6\build\native\libkolme.targets')" />
     <Import Project="..\packages\libpapki.1.0.15\build\native\libpapki.targets" Condition="Exists('..\packages\libpapki.1.0.15\build\native\libpapki.targets')" />
-    <Import Project="..\packages\libpogodi.1.0.10\build\native\libpogodi.targets" Condition="Exists('..\packages\libpogodi.1.0.10\build\native\libpogodi.targets')" />
+    <Import Project="..\packages\libopros.1.0.35\build\native\libopros.targets" Condition="Exists('..\packages\libopros.1.0.35\build\native\libopros.targets')" />
     <Import Project="..\packages\libunikod.2.0.4\build\native\libunikod.targets" Condition="Exists('..\packages\libunikod.2.0.4\build\native\libunikod.targets')" />
     <Import Project="..\packages\libstob.3.2.7\build\native\libstob.targets" Condition="Exists('..\packages\libstob.3.2.7\build\native\libstob.targets')" />
     <Import Project="..\packages\pixman_static.0.32.4.3\build\native\pixman_static.targets" Condition="Exists('..\packages\pixman_static.0.32.4.3\build\native\pixman_static.targets')" />
@@ -189,7 +189,7 @@
     <Error Condition="!Exists('..\packages\libutki.1.0.22\build\native\libutki.targets')" Text="$([System.String]::Format('$(ErrorText)', '..\packages\libutki.1.0.22\build\native\libutki.targets'))" />
     <Error Condition="!Exists('..\packages\libkolme.1.0.6\build\native\libkolme.targets')" Text="$([System.String]::Format('$(ErrorText)', '..\packages\libkolme.1.0.6\build\native\libkolme.targets'))" />
     <Error Condition="!Exists('..\packages\libpapki.1.0.15\build\native\libpapki.targets')" Text="$([System.String]::Format('$(ErrorText)', '..\packages\libpapki.1.0.15\build\native\libpapki.targets'))" />
-    <Error Condition="!Exists('..\packages\libpogodi.1.0.10\build\native\libpogodi.targets')" Text="$([System.String]::Format('$(ErrorText)', '..\packages\libpogodi.1.0.10\build\native\libpogodi.targets'))" />
+    <Error Condition="!Exists('..\packages\libopros.1.0.35\build\native\libopros.targets')" Text="$([System.String]::Format('$(ErrorText)', '..\packages\libopros.1.0.35\build\native\libopros.targets'))" />
     <Error Condition="!Exists('..\packages\libunikod.2.0.4\build\native\libunikod.targets')" Text="$([System.String]::Format('$(ErrorText)', '..\packages\libunikod.2.0.4\build\native\libunikod.targets'))" />
     <Error Condition="!Exists('..\packages\libstob.3.2.7\build\native\libstob.targets')" Text="$([System.String]::Format('$(ErrorText)', '..\packages\libstob.3.2.7\build\native\libstob.targets'))" />
     <Error Condition="!Exists('..\packages\pixman_static.0.32.4.3\build\native\pixman_static.targets')" Text="$([System.String]::Format('$(ErrorText)', '..\packages\pixman_static.0.32.4.3\build\native\pixman_static.targets'))" />
