--- a/homebrew/mordavokne.rb.in
+++ b/homebrew/mordavokne.rb.in
@@ -7,7 +7,7 @@ class Mordavokne < Formula
   depends_on "prorab" => :build
   depends_on "libutki"
   depends_on "libpapki"
-  depends_on "libpogodi"
+  depends_on "libopros"
   depends_on "libaika"
   depends_on "puu"
   depends_on "glew"
