--- a/msvs_solution/mordavokne/mordavokne.vcxproj
+++ b/msvs_solution/mordavokne/mordavokne.vcxproj
@@ -263,7 +263,7 @@
     <Import Project="..\packages\libjpeg_static.6.1.1.6\build\native\libjpeg_static.targets" Condition="Exists('..\packages\libjpeg_static.6.1.1.6\build\native\libjpeg_static.targets')" />
     <Import Project="..\packages\libutki.1.1.41\build\native\libutki.targets" Condition="Exists('..\packages\libutki.1.1.41\build\native\libutki.targets')" />
     <Import Project="..\packages\libpapki.1.0.61\build\native\libpapki.targets" Condition="Exists('..\packages\libpapki.1.0.61\build\native\libpapki.targets')" />
-    <Import Project="..\packages\libpogodi.1.0.30\build\native\libpogodi.targets" Condition="Exists('..\packages\libpogodi.1.0.30\build\native\libpogodi.targets')" />
+    <Import Project="..\packages\libopros.1.0.35\build\native\libopros.targets" Condition="Exists('..\packages\libopros.1.0.35\build\native\libopros.targets')" />
     <Import Project="..\packages\libnitki.1.0.25\build\native\libnitki.targets" Condition="Exists('..\packages\libnitki.1.0.25\build\native\libnitki.targets')" />
     <Import Project="..\packages\libunikod.2.0.36\build\native\libunikod.targets" Condition="Exists('..\packages\libunikod.2.0.36\build\native\libunikod.targets')" />
     <Import Project="..\packages\libmikroxml.0.1.16\build\native\libmikroxml.targets" Condition="Exists('..\packages\libmikroxml.0.1.16\build\native\libmikroxml.targets')" />
@@ -287,7 +287,7 @@
     <Error Condition="!Exists('..\packages\libjpeg_static.6.1.1.6\build\native\libjpeg_static.targets')" Text="$([System.String]::Format('$(ErrorText)', '..\packages\libjpeg_static.6.1.1.6\build\native\libjpeg_static.targets'))" />
     <Error Condition="!Exists('..\packages\libutki.1.1.41\build\native\libutki.targets')" Text="$([System.String]::Format('$(ErrorText)', '..\packages\libutki.1.1.41\build\native\libutki.targets'))" />
     <Error Condition="!Exists('..\packages\libpapki.1.0.61\build\native\libpapki.targets')" Text="$([System.String]::Format('$(ErrorText)', '..\packages\libpapki.1.0.61\build\native\libpapki.targets'))" />
-    <Error Condition="!Exists('..\packages\libpogodi.1.0.30\build\native\libpogodi.targets')" Text="$([System.String]::Format('$(ErrorText)', '..\packages\libpogodi.1.0.30\build\native\libpogodi.targets'))" />
+    <Error Condition="!Exists('..\packages\libopros.1.0.35\build\native\libopros.targets')" Text="$([System.String]::Format('$(ErrorText)', '..\packages\libopros.1.0.35\build\native\libopros.targets'))" />
     <Error Condition="!Exists('..\packages\libnitki.1.0.25\build\native\libnitki.targets')" Text="$([System.String]::Format('$(ErrorText)', '..\packages\libnitki.1.0.25\build\native\libnitki.targets'))" />
     <Error Condition="!Exists('..\packages\libunikod.2.0.36\build\native\libunikod.targets')" Text="$([System.String]::Format('$(ErrorText)', '..\packages\libunikod.2.0.36\build\native\libunikod.targets'))" />
     <Error Condition="!Exists('..\packages\libmikroxml.0.1.16\build\native\libmikroxml.targets')" Text="$([System.String]::Format('$(ErrorText)', '..\packages\libmikroxml.0.1.16\build\native\libmikroxml.targets'))" />
