--- a/msvs_solution/tests/packages.config
+++ b/msvs_solution/tests/packages.config
@@ -10,7 +10,7 @@
   <package id="libnitki" version="1.0.25" targetFramework="native" />
   <package id="libpapki" version="1.0.61" targetFramework="native" />
   <package id="libpng_static" version="1.4.1.6" targetFramework="native" />
-  <package id="libpogodi" version="1.0.30" targetFramework="native" />
+  <package id="libopros" version="1.0.35" targetFramework="native" />
   <package id="libsvgdom" version="0.3.29" targetFramework="native" />
   <package id="libsvgren" version="0.4.62" targetFramework="native" />
   <package id="libunikod" version="2.0.36" targetFramework="native" />
