--- a/nuget/nuget.autopkg.in
+++ b/nuget/nuget.autopkg.in
@@ -31,7 +31,7 @@ nuget{
 			libmorda-opengl2-ren/0.1.7;
 			glew.v140/1.12.0;
 			libpapki/1.0.15;
-			libpogodi/1.0.10;
+			libopros/1.0.10;
 			puu/0.1.0;
 			libutki/1.0.22;
 		};
